[package]
name = "rl-replay-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boxcars = "0.9.10"
criterion = "0.5.1"
phf = { version = "0.11.2", features = ["macros"] }
relative-path = "1.9.0"
serde = "1.0.188"
serde_json = "1.0.108"
subtr-actor = {git="https://github.com/rlrml/subtr-actor.git", branch = "works_with_spectators"}
typetag = "0.2.13"

[[bench]]
name = "starter_benches"
harness = false
